Fixed shared z-index css vars

--- a/src/index.scss
+++ b/src/index.scss
@@ -67,10 +67,10 @@
   --btn-font-size: 16px;
 
   // Z Indexes
-  --z-index-background: 100;
-  --z-index-content: 200;
-  --z-index-modal: 100;
-  --z-index-alert: 100;
+  --z-index-background: 200;
+  --z-index-content: 400;
+  --z-index-modal: 600;
+  --z-index-alert: 800;
 }
 
 .sl {
